Add ejs-mate. Partials and layouts foleder

--- a/views/campground/index.ejs
+++ b/views/campground/index.ejs
@@ -1,25 +1,17 @@
 <!-- @format -->
 
-<!DOCTYPE html>
-<html lang="en">
-     <head>
-          <meta charset="UTF-8" />
-          <title>All Campgrounds</title>
-     </head>
-     <body>
-          <h1>All Campgrounds</h1>
+<% layout("layouts/boilerplate") %>
 
-          <a href="/campgrounds/new">Add New Campground</a>
+<h1>All Campgrounds</h1>
 
-          <ul>
-               <% campgrounds.forEach(camp => { %>
-               <li>
-                    <a href="/campgrounds/<%= camp._id %>">
-                         <strong><%= camp.title %></strong> - <%= camp.location
-                         %>
-                    </a>
-               </li>
-               <% }) %>
-          </ul>
-     </body>
-</html>
+<a href="/campgrounds/new">Add New Campground</a>
+
+<ul>
+     <% campgrounds.forEach(camp => { %>
+     <li>
+          <a href="/campgrounds/<%= camp._id %>">
+               <strong><%= camp.title %></strong> - <%= camp.location %>
+          </a>
+     </li>
+     <% }) %>
+</ul>
