--- a/views/campground/edit.ejs
+++ b/views/campground/edit.ejs
@@ -1,56 +1,44 @@
 <!-- @format -->
 
-<!DOCTYPE html>
-<html lang="en">
-     <head>
-          <meta charset="UTF-8" />
-          <title>Edit <%= campground.title %></title>
-     </head>
-     <body>
-          <h1>Edit Campground</h1>
-          <form
-               action="/campgrounds/<%= campground._id %>?_method=PUT"
-               method="POST"
-          >
-               <label for="title">Title:</label>
-               <input
-                    type="text"
-                    name="title"
-                    id="title"
-                    value="<%= campground.title %>"
-                    required
-               /><br /><br />
+<% layout("layouts/boilerplate") %>
 
-               <label for="location">Location:</label>
-               <input
-                    type="text"
-                    name="location"
-                    id="location"
-                    value="<%= campground.location %>"
-                    required
-               /><br /><br />
+<h1>Edit Campground</h1>
+<form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+     <label for="title">Title:</label>
+     <input
+          type="text"
+          name="title"
+          id="title"
+          value="<%= campground.title %>"
+          required
+     /><br /><br />
 
-               <label for="description">Description:</label>
-               <textarea name="description" id="description">
+     <label for="location">Location:</label>
+     <input
+          type="text"
+          name="location"
+          id="location"
+          value="<%= campground.location %>"
+          required
+     /><br /><br />
+
+     <label for="description">Description:</label>
+     <textarea name="description" id="description">
 <%= campground.description %></textarea
-               ><br /><br />
+     ><br /><br />
 
-               <label for="price">Price:</label>
-               <input
-                    type="number"
-                    name="price"
-                    id="price"
-                    step="0.01"
-                    value="<%= campground.price %>"
-               /><br /><br />
+     <label for="price">Price:</label>
+     <input
+          type="number"
+          name="price"
+          id="price"
+          step="0.01"
+          value="<%= campground.price %>"
+     /><br /><br />
 
-               <button type="submit">Update Campground</button>
-          </form>
+     <button type="submit">Update Campground</button>
+</form>
 
-          <p>
-               <a href="/campgrounds/<%= campground._id %>"
-                    >Back to Campground</a
-               >
-          </p>
-     </body>
-</html>
+<p>
+     <a href="/campgrounds/<%= campground._id %>">Back to Campground</a>
+</p>
