--- a/views/campground/new.ejs
+++ b/views/campground/new.ejs
@@ -1,44 +1,33 @@
 <!-- @format -->
-<!DOCTYPE html>
-<html lang="en">
-     <head>
-          <meta charset="UTF-8" />
-          <title>New Campground</title>
-     </head>
-     <body>
-          <h1>Add a New Campground</h1>
-          <form action="/campgrounds" method="POST">
-               <label for="title">Title:</label>
-               <input
-                    type="text"
-                    name="title"
-                    id="title"
-                    required
-               /><br /><br />
+<% layout("layouts/boilerplate") %>
 
-               <label for="location">Location:</label>
-               <input
-                    type="text"
-                    name="location"
-                    id="location"
-                    required
-               /><br /><br />
+<body>
+     <h1>Add a New Campground</h1>
+     <form action="/campgrounds" method="POST">
+          <label for="title">Title:</label>
+          <input type="text" name="title" id="title" required /><br /><br />
 
-               <label for="description">Description:</label>
-               <textarea name="description" id="description"></textarea
-               ><br /><br />
+          <label for="location">Location:</label>
+          <input
+               type="text"
+               name="location"
+               id="location"
+               required
+          /><br /><br />
 
-               <label for="price">Price:</label>
-               <input
-                    type="number"
-                    name="price"
-                    id="price"
-                    step="0.01"
-               /><br /><br />
+          <label for="description">Description:</label>
+          <textarea name="description" id="description"></textarea><br /><br />
 
-               <button type="submit">Create Campground</button>
-          </form>
+          <label for="price">Price:</label>
+          <input
+               type="number"
+               name="price"
+               id="price"
+               step="0.01"
+          /><br /><br />
 
-          <p><a href="/campgrounds">Back to All Campgrounds</a></p>
-     </body>
-</html>
+          <button type="submit">Create Campground</button>
+     </form>
+
+     <p><a href="/campgrounds">Back to All Campgrounds</a></p>
+</body>
