--- a/views/campground/index.ejs
+++ b/views/campground/index.ejs
@@ -2,14 +2,42 @@
 
 <% layout("layouts/boilerplate") %>
 
-<h1>All Campgrounds</h1>
+<h1 class="mb-4">All Campgrounds</h1>
 
-<ul>
+<div class="container">
      <% campgrounds.forEach(camp => { %>
-     <li>
-          <a href="/campgrounds/<%= camp._id %>">
-               <strong><%= camp.title %></strong> - <%= camp.location %>
-          </a>
-     </li>
+     <div class="card mb-3 shadow-sm w-100">
+          <div class="row g-0">
+               <!-- Image -->
+               <div class="col-md-4">
+                    <img
+                         src="<%= camp.image || 'https://via.placeholder.com/600x400?text=No+Image' %>"
+                         class="img-fluid rounded-start h-100 w-100 object-fit-cover"
+                         alt="<%= camp.title %>"
+                    />
+               </div>
+
+               <!-- Content -->
+               <div class="col-md-8">
+                    <div class="card-body">
+                         <h5 class="card-title"><%= camp.title %></h5>
+                         <p class="card-text text-muted mb-1">
+                              <%= camp.location %>
+                         </p>
+                         <% if (camp.description) { %>
+                         <p class="card-text">
+                              <%= camp.description.substring(0, 200) %>...
+                         </p>
+                         <% } %>
+                         <a
+                              href="/campgrounds/<%= camp._id %>"
+                              class="btn btn-primary"
+                         >
+                              View Campground
+                         </a>
+                    </div>
+               </div>
+          </div>
+     </div>
      <% }) %>
-</ul>
+</div>
