--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -32,13 +32,13 @@
                </p>
                <% } %> <% if(campground.price) { %>
                <span class="badge bg-success fs-6 mb-3"
-                    >Price: $<%= campground.price %></span
+                    >Price: $<%= campground.price %>/night</span
                >
                <% } %>
 
                <!-- Action Buttons -->
                <div class="mt-3 d-flex flex-wrap gap-2">
-                    <a href="/campgrounds" class="btn btn-outline-secondary"
+                    <a href="/campgrounds" class="btn btn-warning"
                          >Back to All Campgrounds</a
                     >
                     <a
