--- a/views/campground/new.ejs
+++ b/views/campground/new.ejs
@@ -68,7 +68,7 @@
                <div class="input-group">
                     <span class="input-group-text">$</span>
                     <input
-                         type="number"
+                         type="text"
                          name="price"
                          id="price"
                          step="0.01"
