Add middleware to handle server side error for creating new review

--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -107,6 +107,7 @@
                                         name="review[body]"
                                         rows="3"
                                         placeholder="Write something about this campground..."
+                                        maxlength="1000"
                                    ></textarea>
                               </div>
 
