Implement user authentication with registration and login routes; add password validation script

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -34,5 +34,7 @@
           <script src="/javascripts/alert.js"></script>
 
           <script src="/javascripts/validateForm.js"></script>
+
+          <script src="/javascripts/registerValidation.js"></script>
      </body>
 </html>
