--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,7 +12,8 @@
                <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-               <ul class="navbar-nav ms-auto">
+               <!-- Left-aligned nav items (me-auto pushes the next elements to the right) -->
+               <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                          <a class="nav-link" href="/">Home</a>
                     </li>
@@ -26,6 +27,21 @@
                               >New Campground</a
                          >
                     </li>
+               </ul>
+               <!-- Right-aligned nav items (no extra class needed due to me-auto on the left ul) -->
+               <ul class="navbar-nav">
+                    <% if (!currentUser) { %>
+                    <li class="nav-item">
+                         <a class="nav-link" href="/login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                         <a class="nav-link" href="/register">Sign Up</a>
+                    </li>
+                    <% } else { %>
+                    <li class="nav-item">
+                         <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                    <% } %>
                </ul>
           </div>
      </div>
