--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -70,7 +70,7 @@
                          href="/register"
                          class="btn btn-outline-secondary px-4 shadow-sm rounded-3"
                     >
-                         <i class="bi bi-person-plus-fill me-1"></i> Register
+                         <i class="bi bi-person-plus-fill me-1"></i> Sign Up
                     </a>
                </div>
           </form>
