--- a/views/campground/index.ejs
+++ b/views/campground/index.ejs
@@ -12,7 +12,7 @@
                <!-- Image -->
                <div class="col-md-4">
                     <img
-                         src="<%= camp.image || 'https://via.placeholder.com/600x400?text=No+Image' %>"
+                         src="<%= camp.images[0] ? camp.images[0].url : 'https://via.placeholder.com/600x400?text=No+Image' %>"
                          class="img-fluid h-100 w-100 object-fit-cover"
                          alt="<%= camp.title %>"
                     />
