--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -8,13 +8,53 @@
           <!-- Left Column: Campground Info -->
           <div class="col-md-6">
                <div class="card shadow-sm mb-3 border-0">
-                    <% if(campground.image) { %>
-                    <img
-                         src="<%= campground.image %>"
-                         class="card-img-top w-100"
-                         alt="<%= campground.title %>"
-                         style="object-fit: cover"
-                    />
+                    <% if(campground.images) { %>
+                    <div
+                         id="campgroundCarousel"
+                         class="carousel slide"
+                         data-bs-ride="carousel"
+                    >
+                         <div class="carousel-inner">
+                              <% campground.images.forEach((img, i) => { %>
+                              <div
+                                   class="carousel-item <%= i === 0 ? 'active' : '' %>"
+                              >
+                                   <img
+                                        src="<%= img.url %>"
+                                        class="d-block w-100"
+                                        alt="Campground Image <%= i + 1 %>"
+                                   />
+                              </div>
+                              <% }) %>
+                         </div>
+                         <% if(campground.images.length > 1) { %>
+                         <button
+                              class="carousel-control-prev"
+                              type="button"
+                              data-bs-target="#campgroundCarousel"
+                              data-bs-slide="prev"
+                         >
+                              <span
+                                   class="carousel-control-prev-icon"
+                                   aria-hidden="true"
+                              ></span>
+                              <span class="visually-hidden">Previous</span>
+                         </button>
+                         <button
+                              class="carousel-control-next"
+                              type="button"
+                              data-bs-target="#campgroundCarousel"
+                              data-bs-slide="next"
+                         >
+                              <span
+                                   class="carousel-control-next-icon"
+                                   aria-hidden="true"
+                              ></span>
+                              <span class="visually-hidden">Next</span>
+                         </button>
+                         <% } %>
+                    </div>
+
                     <% } else { %>
                     <img
                          src="https://via.placeholder.com/800x400?text=No+Image"
