--- a/views/campground/new.ejs
+++ b/views/campground/new.ejs
@@ -52,23 +52,15 @@
                          <i class="bi bi-image-fill me-1 text-warning"></i>
                          Upload Image(s)
                     </label>
-                    <div class="mb-3">
-                         <div class="form-file custom-file">
-                              <input
-                                   type="file"
-                                   class="form-file-input"
-                                   id="image"
-                                   name="image"
-                                   multiple
-                              />
-                              <label class="form-file-label" for="image">
-                                   <span
-                                        class="form-file-text custom-file-label"
-                                        >Choose image(s)...</span
-                                   >
-                                   <span class="form-file-button">Browse</span>
-                              </label>
-                         </div>
+
+                    <div class="input-group mb-3">
+                         <input
+                              type="file"
+                              class="form-control"
+                              id="image"
+                              name="image"
+                              multiple
+                         />
                     </div>
                </div>
 
