--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -36,5 +36,7 @@
           <script src="/javascripts/validateForm.js"></script>
 
           <script src="/javascripts/registerValidation.js"></script>
+
+          <!-- <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script> -->
      </body>
 </html>
