--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -15,6 +15,16 @@
                href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
           />
 
+          <link
+               rel="stylesheet"
+               href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css"
+          />
+          <link
+               rel="stylesheet"
+               href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css"
+          />
+          <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
+
           <!-- Leaflet CSS -->
           <link
                rel="stylesheet"
@@ -48,5 +58,7 @@
                integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
                crossorigin=""
           ></script>
+
+          <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
      </body>
 </html>
