add links in map to show page

--- a/views/campground/index.ejs
+++ b/views/campground/index.ejs
@@ -71,6 +71,8 @@
 </div>
 
 <script>
+     const mapToken = "<%= process.env.MAPTILER_API_KEY %>";
+
      const campgrounds= <%- JSON.stringify(campgrounds) %>;
 </script>
 
