--- a/views/campground/index.ejs
+++ b/views/campground/index.ejs
@@ -1,6 +1,6 @@
 <!-- @format -->
 <% layout("layouts/boilerplate") %>
-<div id="campgroundMap" class="mt-0" style="height: 300px"></div>
+<div id="campgroundMap"></div>
 
 <div class="container mt-4">
      <h1 class="mb-4 text-center">
