--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -134,10 +134,7 @@
           <!-- Right Column: Leave a Review + Reviews -->
           <div class="col-md-6">
                <!-- Map container: put this where you want the map, e.g. above reviews -->
-               <div
-                    id="map"
-                    style="width: 100%; height: 300px; margin-bottom: 20px"
-               ></div>
+               <div id="map" class="mb-3"></div>
                <% if (currentUser) { %>
                <!-- Rating Form -->
                <div class="card shadow-sm mb-3 border-0">
