--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -32,6 +32,7 @@
                integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
                crossorigin=""
           />
+          <link rel="stylesheet" href="/stylesheets/map.css" />
      </head>
      <body class="d-flex flex-column min-vh-100">
           <!-- Navbar -->
