--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -7,31 +7,50 @@
           <title>YelpCamp</title>
           <!-- Bootstrap 5 CDN -->
           <link
+               crossorigin="anonymous"
                href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
                rel="stylesheet"
           />
           <link
+               crossorigin="anonymous"
                rel="stylesheet"
                href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
           />
 
           <link
+               crossorigin="anonymous"
                rel="stylesheet"
                href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css"
           />
           <link
+               crossorigin="anonymous"
                rel="stylesheet"
                href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css"
           />
-          <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
+          <script
+               crossorigin="anonymous"
+               src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"
+          ></script>
 
           <!-- Leaflet CSS -->
           <link
                rel="stylesheet"
                href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
                integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-               crossorigin=""
+               crossorigin="anonymous"
           />
+          <!-- MarkerCluster CSS -->
+          <link
+               crossorigin="anonymous"
+               rel="stylesheet"
+               href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css"
+          />
+          <link
+               crossorigin="anonymous"
+               rel="stylesheet"
+               href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css"
+          />
+
           <link rel="stylesheet" href="/stylesheets/map.css" />
      </head>
      <body class="d-flex flex-column min-vh-100">
@@ -42,13 +61,18 @@
           <%- include("../partials/flash") %>
 
           <!-- Main content -->
+
           <main class="container my-4 flex-grow-1"><%- body %></main>
 
           <!-- Footer -->
           <%- include("../partials/footer") %>
 
           <!-- Bootstrap JS etc -->
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+          <script
+               crossorigin="anonymous"
+               src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+          ></script>
+
           <script src="/javascripts/alert.js"></script>
           <script src="/javascripts/validateForm.js"></script>
           <script src="/javascripts/registerValidation.js"></script>
@@ -57,9 +81,12 @@
           <script
                src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
                integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-               crossorigin=""
+               crossorigin="anonymous"
           ></script>
 
-          <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
+          <script
+               crossorigin="anonymous"
+               src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"
+          ></script>
      </body>
 </html>
