Connect to Mongo Atlas online server

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -75,7 +75,8 @@
 
           <script src="/javascripts/alert.js"></script>
           <script src="/javascripts/validateForm.js"></script>
-          <script src="/javascripts/registerValidation.js"></script>
+          <!-- taken to register.ejs -->
+          <!-- <script src="/javascripts/registerValidation.js"></script> -->
 
           <!-- Leaflet JS -->
           <script
